--- a/general.css
+++ b/general.css
@@ -5,5 +5,8 @@ body{
 	text-align: justify;
 }
 h1{
-	color:#de350b;
+	color: #72caa7;
+	font-weight: normal;
+	margin-top: 40px;
+	margin-bottom: 38px;
 }
