--- a/general.css
+++ b/general.css
@@ -10,3 +10,11 @@ h1{
 	margin-top: 40px;
 	margin-bottom: 38px;
 }
+
+
+code{
+	background-color: #dadada;
+	padding:0 6px;
+	font-weight: normal;
+	font-family: Consolas, monospace, serif;
+}
